# nice-orm

./: .gitignore  Cargo.toml  sample.json
examples/dbcli/: Cargo.toml
examples/dbcli/migrations/: 20220716165237_init.up.sql
examples/dbcli/src/: main.rs  migrate.rs
examples/dbcli/src/migrate/sql_gen/: postgres.rs
examples/schema/: Cargo.toml
examples/schema/src/: lib.rs
nice-orm-cli/: Cargo.toml
nice-orm-cli/migrations/: 20220723150554_add-fields.down.sql  20220723150554_add-fields.up.sql
nice-orm-cli/src/: lib.rs  migrate.rs
nice-orm-cli/src/migrate/: sql_gen.rs
nice-orm-cli/src/migrate/sql_gen/: postgres.rs
nice-orm-derive/: Cargo.toml
nice-orm-derive/src/: lib.rs
nice-orm-sqlgen/: Cargo.toml
nice-orm-sqlgen/src/: lib.rs  postgres.rs
src/: entity_manager.rs  entity_meta.rs  lib.rs  middleware.rs  query.rs  storage.rs
src/middleware/cache/: redis.rs
src/storage/: file.rs
