[package]
name = "nice-orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.56"
bevy_reflect = "0.8.0"
lazy_static = "1.4.0"
nice-orm-derive = { path = "nice-orm-derive" }
phf = { version = "0.11.0", features = ["macros"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.81"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1.19.2", features = ["fs"] }

[workspace]
members = ["nice-orm-derive", "nice-orm-cli", "nice-orm-sqlgen", "examples/dbcli", "examples/schema"]
