[package]
name = "nice-orm-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
convert_case = "0.5.0"
darling = "0.14.1"
proc-macro-crate = "1.1.3"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = { version = "1.0.96", features = ["extra-traits"] }
