[package]
name = "migrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
nice-orm-cli = { path = "../../nice-orm-cli" }
schema = { path = "../schema" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
